# serializer version: 1
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac]
  ReplayBuffer(
    act_buf=array([[ 0.16709924],
         [ 0.8363838 ],
         [-1.243306  ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6469487 ,  0.76253355,  0.13329205],
         [ 0.61473   ,  0.78873765,  0.8306498 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.6469487 , 0.76253355, 0.13329205],
         [0.61473   , 0.78873765, 0.8306498 ],
         [0.5648556 , 0.82518977, 1.235707  ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76178324, -0.7545472 , -0.8963753 , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac].1
  -1.6031608581542969
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac].2
  0.43915295600891113
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac].3
  0.33622145652770996
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac].4
  0.10656595230102539
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.lac.lac].5
  -0.620768666267395
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc]
  ReplayBuffer(
    act_buf=array([[ 0.16709924],
         [ 0.8363838 ],
         [-1.243306  ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6469487 ,  0.76253355,  0.13329205],
         [ 0.61473   ,  0.78873765,  0.8306498 ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.6469487 , 0.76253355, 0.13329205],
         [0.61473   , 0.78873765, 0.8306498 ],
         [0.5648556 , 0.82518977, 1.235707  ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76178324, -0.7545472 , -0.8963753 , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc].1
  -1.5640698671340942
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc].2
  0.45661044120788574
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc].3
  0.3358030319213867
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc].4
  0.3512272834777832
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.latc.latc].5
  -0.6032209396362305
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac]
  ReplayBuffer(
    act_buf=array([[ 0.28093982],
         [ 1.0383244 ],
         [-1.5125861 ],
         ...,
         [ 0.        ],
         [ 0.        ],
         [ 0.        ]], dtype=float32),
    done_buf=array([0., 0., 0., ..., 0., 0., 0.], dtype=float32),
    obs_buf=array([[ 0.6520163 ,  0.758205  , -0.46042657],
         [ 0.6462974 ,  0.7630856 ,  0.15036814],
         [ 0.61216897,  0.79072696,  0.878431  ],
         ...,
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ],
         [ 0.        ,  0.        ,  0.        ]], dtype=float32),
    obs_next_buf=array([[0.6462974 , 0.7630856 , 0.15036814],
         [0.61216897, 0.79072696, 0.878431  ],
         [0.5618093 , 0.82726675, 1.2445884 ],
         ...,
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ],
         [0.        , 0.        , 0.        ]], dtype=float32),
    ptr=800,
    rew_buf=array([-0.76183426, -0.7568918 , -0.911188  , ...,  0.        ,
          0.        ,  0.        ], dtype=float32),
    size=800,
  )
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac].1
  -0.8818840980529785
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac].2
  -0.5447466373443604
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac].3
  0.008646965026855469
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac].4
  1.228700876235962
# ---
# name: TestTF2Algos.test_reproducibility[stable_learning_control.algos.tf2.sac.sac].5
  -0.7967087030410767
# ---
